fix-uplord-btn-add-collapse

--- a/style.css
+++ b/style.css
@@ -126,8 +126,10 @@ h1 {
     align-items: flex-start;
     flex-wrap: wrap;
     padding: 20px;
-    min-height: 500px;
+    min-height: 10px;
+    min-width: 10px;
     margin: 20px;
+    margin-top: 0px;
     background-color: var(--container-color);
     border-radius: 20px;
     transition: 0.4s ease;
@@ -210,4 +212,19 @@ input[type=file] {
 
 .inputLabel:hover {
     background-color: var(--btn-hover);
+}
+
+.collapse {
+    margin-left: 20px;
+}
+
+.footer {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: rgba(255, 192, 203, 0.906);
+
 }
